--- a/test/index.html
+++ b/test/index.html
@@ -10,9 +10,10 @@
     <script src="../bower_components/react/react.js"></script>
     <script src="../bower_components/react/react-dom.js"></script>
     <script src="../bower_components/babel/browser.js"></script>
+    <script src="../bower_components/babel/browser-polyfill.js"></script>
 
     <!-- Build -->
-    <script src="http://rawgit.com/Rekord/rekord/master/build/rekord.js"></script>
+    <script src="../bower_components/rekord/build/rekord.js"></script>
     <script src="../build/rekord-react.js"></script>
 
     <!-- Debugging -->
